update error message in index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>Adetola Fashina's portfolio</title>
+    <title>Adetola Fashina's Portfolio</title>
   </head>
   <body>
     <nav>
@@ -279,23 +279,22 @@
             <form action="/" id="form" method="GET">
               <label for="name"></label>
               <input type="text" id="name" placeholder="NAME" , />
-              <div class="input-container">
-                <p class="error" style="color: red"></p>
-              </div>
+
+              <p class="error"></p>
 
               <label for="email"></label>
               <input type="text" name="email" id="email" placeholder="EMAIL" />
-              <div class="input-container">
-                <p class="error">Sorry, invalid format here</p>
-              </div>
+
+              <p class="error"></p>
+
               <textarea
                 name="ClientMessage"
                 id="ClientMessage"
                 placeholder="MESSAGE"
               ></textarea>
-              <div class="input-container">
-                <p class="error">Sorry, invalid format here</p>
-              </div>
+
+              <p class="error"></p>
+
               <button type="submit" id="btn">Send Message</button>
             </form>
           </div>
